# haskzure

./: .gitignore  Makefile  README.md  haskzure.cabal
Cloud/: Haskzure.hs
Cloud/Haskzure/: Core.hs  Gen.hs  Resources.hs
Cloud/Haskzure/Core/: Auth.hs  AzureResource.hs  Operations.hs  Resource.hs  Utils.hs
Cloud/Haskzure/Resources/: Networking.hs  ResourceGroups.hs  VirtualMachine.hs
Haskzure/: Core.hs
Haskzure/Core/: AzureResource.hs  Resource.hs  Utils.hs
docs/: Diploma.bib  Diploma.tex  Resource.tex  Summary.tex  utils.sty
tests/: Main.hs  ResourceTests.hs  TestInstances.hs  TestResource.hs  TestUtils.hs
