name:                haskzure
version:             0.1.0.0
synopsis:            Bindings for Azure Resource Manager.

description:
            Haskzure is a library containing bindings and abstractions for making use
            of the Azure Resource Manager REST APIs.
            .
            -- Uses of Haskzure...
            .
            Haskzure consists of two modules: Core, which contains the core part of
            the project, alongside a Prelude containing useful constructs for use of the
            aforementioned core bits.

homepage:            https://github.com/aznashwan/haskzure
license:             Apache-2.0
license-file:        LICENSE
author:              Nashwan Azhari
maintainer:          nazhari@cloudbasesolutions.com
-- copyright:           
category:            Cloud
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Haskzure.Core, Haskzure.Core.AzureResource, Haskzure.Core.Resource,
                       Haskzure.Core.Utils, Haskzure.Gen.Instances,
                       Haskzure.Gen.Utils
  -- other-modules:       
  other-extensions:    MultiParamTypeClasses, FlexibleInstances, FunctionalDependencies, OverloadedStrings
                       TemplateHaskell, QuasiQuotes
  ghc-options:         -Wall
  build-depends:       base >= 4.9, aeson, data-default, bytestring,
                       text, word8, template-haskell, unordered-containers
  hs-source-dirs:      ., Haskzure
  default-language:    Haskell2010

Test-Suite test
  type:                exitcode-stdio-1.0
  build-depends:       aeson, base >= 4.9, bytestring, QuickCheck, text,
                       vector, haskzure, word8
  hs-source-dirs:      tests
  main-is:             Main.hs
  other-modules:       ResourceTests, TestUtils
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings, FlexibleInstances
