name:                haskzure
version:             0.1.0.0
synopsis:            Bindings for Azure Resource Manager.

description:
            Haskzure is a library containing bindings and abstractions for making use
            of the Azure Resource Manager REST APIs.
            .
            -- Uses of Haskzure
            .
            Haskzure consists of two modules: Core, which contains the core part of
            the project, alongside a Prelude containing useful constructs for use of the
            aforementioned core bits.

homepage:            https://github.com/aznashwan/haskzure
license:             Apache-2.0
license-file:        LICENSE
author:              Nashwan Azhari
maintainer:          aznashwan@yahoo.com
copyright:           Nashwan Azhari (2016)
category:            Cloud
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Cloud.Haskzure, Cloud.Haskzure.Core, Cloud.Haskzure.Gen
  other-modules:       Cloud.Haskzure.Core.AzureResource, Cloud.Haskzure.Core.Resource,
                       Cloud.Haskzure.Gen.Instances, Cloud.Haskzure.Gen.Utils,
                       Cloud.Haskzure.Core.Auth, Cloud.Haskzure.Core.Utils
  other-extensions:    MultiParamTypeClasses, FlexibleInstances, FunctionalDependencies, OverloadedStrings
                       TemplateHaskell, QuasiQuotes
  ghc-options:         -Wall
  build-depends:       base < 5.0, aeson, data-default, bytestring, generic-deriving,
                       text, word8, template-haskell, containers, http-client, http-client-tls
  if impl(ghc <= 8.0)
    -- provide/emulate `Control.Monad.Fail` -- pre-GHC8
    build-depends: fail == 4.9.*
  default-language:    Haskell2010

Test-Suite test
  type:                exitcode-stdio-1.0
  build-depends:       aeson, base < 5.0, bytestring, QuickCheck, text,
                       vector, haskzure, word8, template-haskell
  hs-source-dirs:      tests
  main-is:             Main.hs
  other-modules:       TestResource, TestUtils, TestInstances
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings, FlexibleInstances
